# SelfTestingGAT_LLM

./: .gitignore  .pre-commit-config.yaml  GAT-demo.ipynb  Generic_Chatbot.ipynb  LICENSE  MANIFEST.in  README.md  environment.yml  llm_interface.py  llm_invoker.py  prompt_GAT.txt  pyproject.toml  requirements.txt  simple_mcp_calculator.py  test_llm_tools.py
MATH/: math_dataset.py  math_examples.txt
gat_llm/: connector_mcp.py  llm_interface.py  llm_invoker.py
llm_providers/: anthropic.py  aws_bedrock.py  aws_bedrock_cohere.py  aws_bedrock_nova.py  base_service.py  maritaca.py  openai.py
mcp_simple_calc/: Dockerfile  Dockerfile-Copy1  README.md  requirements.txt  simple_mcp_calculator.py
prompts/: prompt_GAT.txt  prompt_base.txt  prompt_generator.py
self_tests/: Result_Analysis.ipynb  only_selected_test_cases_Claude 3 Haiku.json  only_selected_test_cases_Claude 3 Sonnet.json  only_selected_test_cases_Claude 3.5 Sonnet - Anthropic.json  only_selected_test_cases_GPT 3.5 - OpenAI.json  only_selected_test_cases_GPT 4o - OpenAI.json  selected_with_dummies_test_cases_Claude 3 Haiku.json  selected_with_dummies_test_cases_Claude 3 Sonnet.json  selected_with_dummies_test_cases_Claude 3.5 Sonnet - Anthropic.json  selected_with_dummies_test_cases_GPT 3.5 - OpenAI.json  selected_with_dummies_test_cases_GPT 4o - OpenAI.json  self_test_base.py  self_test_generator.py  self_test_performer.py  self_test_results_Amazon Nova Lite 1.0 - Bedrock_True.csv  self_test_results_Amazon Nova Micro 1.0 - Bedrock_True.csv  self_test_results_Amazon Nova Pro 1.0 - Bedrock_True.csv  (+43 more)
(+78 files in other folders)
